# emergence

./: LICENSE  README.md  pyproject.toml
emergence/: _utils.py
emergence/codemod/commands/: convert_union_annotations.py
emergence/codemod/visitors/: __init__.py  _convert_union_annotations.py
emergence/codemod/visitors/tests/: test_convert_union_annotations.py
emergence/django/matchers/: __init__.py  _models.py
emergence/matchers/: __init__.py  _literals.py
emergence/matchers/tests/: test_literals.py
